# gylmxx

./: .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  build.sh  devreqs.txt  setup.py
gylm/: __init__.py  connectivity.py  gnlylm.py  readwrite.py  soapgto.py
gylm/cxx/: bindings.cpp  celllist.cpp  gridsearch.cpp  gridsearch.hpp  gylm.cpp  soapgto.cpp  ylm.cpp
scripts/: build_wheels.sh
src/gylm/: CMakeLists.txt  GYLMRC.in  __init__.py  bindings.cpp  celllist.hpp  kernel.cpp  soapgto.cpp  soapgto.hpp
src/gylm/python/: CMakeLists.txt  __init__.py  connectivity.py  gylm.py  jaxfun.py  readwrite.py  soapgto.py
test/test_gylm/: test.py
test/test_ylm/: test.py
travis/: build_wheels.sh
